# pushback

./: .gitignore  README.md  bootstrap.sh  dev.py  pushback.py  pyproject.toml
.github/workflow/: ci.yml  common-build.yml  release.yml
.github/workflows/: ci.yml  common-build.yml  release.yml
docs/: options.md  recipes.md
scripts/: bootstrap-environment.sh  dev.py  resolve-python.sh  test-dist.sh
src/pushback/: __init__.py  __main__.py  _meta.py  cli.py  config.py  filter.py  remote.py  sync.py
src/pushback/_embedded/: __init__.py  config.toml  profiles.toml
tests/: conftest.py  e2e-test.sh  test_e2e.py  test_filter.py  test_sync.py
tests/docker/: Dockerfile  entrypoint.sh
tests/unit/: test_filter.py  test_remote.py  test_sync.py
