[project]
name = "pushback"
version = "0.1.0"
description = "SSH/rsync-based backup tool with gitignore-style filtering"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Dmitry Demin" }]
keywords = ["backup", "rsync", "ssh", "sync", "gitignore"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/dmidem/pushback"
Repository = "https://github.com/dmidem/pushback"
Issues = "https://github.com/dmidem/pushback/issues"

[project.scripts]
pushback = "pushback.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.3",
  "pyinstaller>=6.16.0",
  "types-pyinstaller>=6.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---- Packaging (src layout, include data + typing marker + licenses) ----
[tool.hatch.build.targets.wheel]
packages = ["src/pushback"]
include = [
  "src/pushback/**/*.toml",
  "src/pushback/py.typed",
  "LICENSE-*",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "src",
  "tests",
  "docs",
  "pyproject.toml",
  "README.md",
  "LICENSE-*",
]

# ---- Linting ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# ---- Type checking ----
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
mypy_path = ["src"]

# ---- Testing ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage points at the installed package name (preferred for src-layout)
[tool.coverage.run]
source = ["pushback"]

